[package]
name = "day12"
version = "0.1.0"
authors = ["Tanel Liiv <tanel.liiv@defendec.com>"]
edition = "2018"

[profile.release]
lto=true
codegen-units=1
opt-level=3
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.1"
num = "0.2"
